<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlatBank"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="45dp"
            app:srcCompat="@drawable/draw" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/reg"
            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="40dp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:background="@color/blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginLeft="40dp"
            android:textSize="16dp"
            android:layout_marginTop="120dp"
            android:text="@string/enter" />

        <EditText
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:hint="@string/login"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign"
            android:layout_marginLeft="30dp"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="120dp"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:text="@string/next"
            android:onClick="nextekr"
            android:background="@drawable/b"
            android:textAllCaps="true" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105sp"
        android:background="@color/white">

    </LinearLayout>

</LinearLayout>

