<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountPrice"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="127dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/back"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/blueeee"
            android:textSize="10dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="back"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/str" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/cou"

            android:textAlignment="center"
            android:textColor="@color/pink"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:background="@color/blue"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text"
            android:layout_width="200sp"
            android:layout_height="30sp"
            android:background="@drawable/d"
            android:backgroundTint="@color/white"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="100dp"
            android:text="Ваш выбор квартиры"
            android:textColor="@color/black"
            android:textAlignment="center">

        </TextView>

        <Spinner
            android:id="@+id/spinner"
            android:entries="@array/kv"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/d" />
        <EditText
            android:id="@+id/editt"
            android:layout_width="175sp"
            android:layout_height="30sp"
            android:background="@drawable/d"
            android:backgroundTint="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="110dp"
            android:textSize="14sp"
            android:textAlignment="center"
            android:inputType="number"
            android:textColorHint="@color/black"
            android:hint="@string/en"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/butt"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:onClick="ras"
            android:text="Рассчитать"
            android:background="@drawable/b"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/res"
            android:layout_width="170sp"
            android:layout_height="30sp"
            android:text="@string/rezzz"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="115dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@drawable/d"
            android:backgroundTint="@color/white">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="@color/white">

    </LinearLayout>
</LinearLayout>